--- a/hand_gridtypo1.html
+++ b/hand_gridtypo1.html
@@ -183,65 +183,165 @@
       }
       const { cols, rows, pad, cellW, cellH, baseVerts, verts } = lastLayout;
 
-      ctx.fillStyle = params.fillColor;
+      const boundarySegments = [];
       for (const key of filledSquares) {
         const [cx, cy] = key.split(",").map((v) => Number(v));
         if (Number.isNaN(cx) || Number.isNaN(cy)) {
           continue;
         }
-        const v00 = verts[cy]?.[cx];
-        const v10 = verts[cy]?.[cx + 1];
-        const v11 = verts[cy + 1]?.[cx + 1];
-        const v01 = verts[cy + 1]?.[cx];
-        const b00 = baseVerts[cy]?.[cx];
-        const b10 = baseVerts[cy]?.[cx + 1];
-        const b11 = baseVerts[cy + 1]?.[cx + 1];
-        const b01 = baseVerts[cy + 1]?.[cx];
-        if (!v00 || !v10 || !v11 || !v01 || !b00 || !b10 || !b11 || !b01) {
-          continue;
+        const leftKey = `${cx - 1},${cy}`;
+        const rightKey = `${cx + 1},${cy}`;
+        const upKey = `${cx},${cy - 1}`;
+        const downKey = `${cx},${cy + 1}`;
+        if (cx === 0 || !filledSquares.has(leftKey)) {
+          boundarySegments.push({ a: `${cx},${cy}`, b: `${cx},${cy + 1}` });
         }
-        let p0 = { ...v00 };
-        let p1 = { ...v10 };
-        let p2 = { ...v11 };
-        let p3 = { ...v01 };
-        if (params.fillSize < 0.999) {
-          const cxm = (p0.x + p1.x + p2.x + p3.x) / 4;
-          const cym = (p0.y + p1.y + p2.y + p3.y) / 4;
-          p0 = { x: cxm + (p0.x - cxm) * params.fillSize, y: cym + (p0.y - cym) * params.fillSize };
-          p1 = { x: cxm + (p1.x - cxm) * params.fillSize, y: cym + (p1.y - cym) * params.fillSize };
-          p2 = { x: cxm + (p2.x - cxm) * params.fillSize, y: cym + (p2.y - cym) * params.fillSize };
-          p3 = { x: cxm + (p3.x - cxm) * params.fillSize, y: cym + (p3.y - cym) * params.fillSize };
-        } else {
-          p0 = { x: Math.round(p0.x), y: Math.round(p0.y) };
-          p1 = { x: Math.round(p1.x), y: Math.round(p1.y) };
-          p2 = { x: Math.round(p2.x), y: Math.round(p2.y) };
-          p3 = { x: Math.round(p3.x), y: Math.round(p3.y) };
+        if (cx === cols - 2 || !filledSquares.has(rightKey)) {
+          boundarySegments.push({ a: `${cx + 1},${cy}`, b: `${cx + 1},${cy + 1}` });
         }
-        ctx.save();
-        ctx.beginPath();
-        ctx.moveTo(b00.x, b00.y);
-        ctx.lineTo(b10.x, b10.y);
-        ctx.lineTo(b11.x, b11.y);
-        ctx.lineTo(b01.x, b01.y);
-        ctx.closePath();
-        ctx.clip();
+        if (cy === 0 || !filledSquares.has(upKey)) {
+          boundarySegments.push({ a: `${cx},${cy}`, b: `${cx + 1},${cy}` });
+        }
+        if (cy === rows - 2 || !filledSquares.has(downKey)) {
+          boundarySegments.push({ a: `${cx},${cy + 1}`, b: `${cx + 1},${cy + 1}` });
+        }
+      }
 
-        ctx.beginPath();
-        ctx.moveTo(p0.x, p0.y);
-        ctx.lineTo(p1.x, p1.y);
-        ctx.lineTo(p2.x, p2.y);
-        ctx.lineTo(p3.x, p3.y);
-        ctx.closePath();
-        ctx.fill();
-        if (params.fillSize >= 0.999) {
+      ctx.fillStyle = params.fillColor;
+      if (params.fillSize >= 0.999 && boundarySegments.length > 0) {
+        const edgeKey = (a, b) => (a < b ? `${a}|${b}` : `${b}|${a}`);
+        const adjacency = new Map();
+        for (const seg of boundarySegments) {
+          if (!adjacency.has(seg.a)) {
+            adjacency.set(seg.a, []);
+          }
+          if (!adjacency.has(seg.b)) {
+            adjacency.set(seg.b, []);
+          }
+          adjacency.get(seg.a).push(seg.b);
+          adjacency.get(seg.b).push(seg.a);
+        }
+
+        const loops = [];
+        const used = new Set();
+        for (const seg of boundarySegments) {
+          const startEdge = edgeKey(seg.a, seg.b);
+          if (used.has(startEdge)) {
+            continue;
+          }
+          let start = seg.a;
+          let current = seg.a;
+          let next = seg.b;
+          const path = [start];
+          while (true) {
+            const eKey = edgeKey(current, next);
+            if (used.has(eKey)) {
+              break;
+            }
+            used.add(eKey);
+            path.push(next);
+            const neighbors = adjacency.get(next) || [];
+            let candidate = null;
+            for (const n of neighbors) {
+              const nKey = edgeKey(next, n);
+              if (!used.has(nKey)) {
+                candidate = n;
+                break;
+              }
+            }
+            if (!candidate) {
+              if (next === start) {
+                loops.push(path);
+              }
+              break;
+            }
+            current = next;
+            next = candidate;
+            if (next === start) {
+              path.push(start);
+              loops.push(path);
+              break;
+            }
+          }
+        }
+
+        if (loops.length > 0) {
           ctx.save();
-          ctx.strokeStyle = params.fillColor;
-          ctx.lineWidth = 1;
-          ctx.lineJoin = "miter";
-          ctx.stroke();
+          ctx.beginPath();
+          for (const loop of loops) {
+            let started = false;
+            for (const vKey of loop) {
+              const [vx, vy] = vKey.split(",").map((v) => Number(v));
+              const v = verts[vy]?.[vx];
+              if (!v) {
+                continue;
+              }
+              if (!started) {
+                ctx.moveTo(v.x, v.y);
+                started = true;
+              } else {
+                ctx.lineTo(v.x, v.y);
+              }
+            }
+            if (started) {
+              ctx.closePath();
+            }
+          }
+          ctx.fill("evenodd");
           ctx.restore();
         }
-        ctx.restore();
+      } else {
+        for (const key of filledSquares) {
+          const [cx, cy] = key.split(",").map((v) => Number(v));
+          if (Number.isNaN(cx) || Number.isNaN(cy)) {
+            continue;
+          }
+          const v00 = verts[cy]?.[cx];
+          const v10 = verts[cy]?.[cx + 1];
+          const v11 = verts[cy + 1]?.[cx + 1];
+          const v01 = verts[cy + 1]?.[cx];
+          const b00 = baseVerts[cy]?.[cx];
+          const b10 = baseVerts[cy]?.[cx + 1];
+          const b11 = baseVerts[cy + 1]?.[cx + 1];
+          const b01 = baseVerts[cy + 1]?.[cx];
+          if (!v00 || !v10 || !v11 || !v01 || !b00 || !b10 || !b11 || !b01) {
+            continue;
+          }
+          let p0 = { ...v00 };
+          let p1 = { ...v10 };
+          let p2 = { ...v11 };
+          let p3 = { ...v01 };
+          if (params.fillSize < 0.999) {
+            const cxm = (p0.x + p1.x + p2.x + p3.x) / 4;
+            const cym = (p0.y + p1.y + p2.y + p3.y) / 4;
+            p0 = { x: cxm + (p0.x - cxm) * params.fillSize, y: cym + (p0.y - cym) * params.fillSize };
+            p1 = { x: cxm + (p1.x - cxm) * params.fillSize, y: cym + (p1.y - cym) * params.fillSize };
+            p2 = { x: cxm + (p2.x - cxm) * params.fillSize, y: cym + (p2.y - cym) * params.fillSize };
+            p3 = { x: cxm + (p3.x - cxm) * params.fillSize, y: cym + (p3.y - cym) * params.fillSize };
+          } else {
+            p0 = { x: Math.round(p0.x), y: Math.round(p0.y) };
+            p1 = { x: Math.round(p1.x), y: Math.round(p1.y) };
+            p2 = { x: Math.round(p2.x), y: Math.round(p2.y) };
+            p3 = { x: Math.round(p3.x), y: Math.round(p3.y) };
+          }
+          ctx.save();
+          ctx.beginPath();
+          ctx.moveTo(b00.x, b00.y);
+          ctx.lineTo(b10.x, b10.y);
+          ctx.lineTo(b11.x, b11.y);
+          ctx.lineTo(b01.x, b01.y);
+          ctx.closePath();
+          ctx.clip();
+
+          ctx.beginPath();
+          ctx.moveTo(p0.x, p0.y);
+          ctx.lineTo(p1.x, p1.y);
+          ctx.lineTo(p2.x, p2.y);
+          ctx.lineTo(p3.x, p3.y);
+          ctx.closePath();
+          ctx.fill();
+          ctx.restore();
+        }
       }
 
       const boundaryVertexKeys = new Set();
@@ -431,10 +531,42 @@
       }
       if (filledSquares.has(key)) {
         filledSquares.delete(key);
+        clearCellVertexOffsets(key);
+        pruneVertexOffsets();
         return true;
       } else {
         filledSquares.add(key);
         return true;
+      }
+    }
+
+    function clearCellVertexOffsets(cellKey) {
+      const [cx, cy] = cellKey.split(",").map((v) => Number(v));
+      if (Number.isNaN(cx) || Number.isNaN(cy)) {
+        return;
+      }
+      vertexOffsets.delete(`${cx},${cy}`);
+      vertexOffsets.delete(`${cx + 1},${cy}`);
+      vertexOffsets.delete(`${cx},${cy + 1}`);
+      vertexOffsets.delete(`${cx + 1},${cy + 1}`);
+    }
+
+    function pruneVertexOffsets() {
+      const active = new Set();
+      for (const key of filledSquares) {
+        const [cx, cy] = key.split(",").map((v) => Number(v));
+        if (Number.isNaN(cx) || Number.isNaN(cy)) {
+          continue;
+        }
+        active.add(`${cx},${cy}`);
+        active.add(`${cx + 1},${cy}`);
+        active.add(`${cx},${cy + 1}`);
+        active.add(`${cx + 1},${cy + 1}`);
+      }
+      for (const key of vertexOffsets.keys()) {
+        if (!active.has(key)) {
+          vertexOffsets.delete(key);
+        }
       }
     }
 
