--- a/hand_gridtypo1.html
+++ b/hand_gridtypo1.html
@@ -96,6 +96,7 @@
     </div>
     <div class="stage">
       <pre id="debug"></pre>
+      <pre id="cell_debug"></pre>
     </div>
   </div>
 
@@ -105,6 +106,7 @@
     const canvas = document.getElementById("grid");
     const statusEl = document.getElementById("status");
     const debugEl = document.getElementById("debug");
+    const cellDebugEl = document.getElementById("cell_debug");
     const guiHost = document.getElementById("gui");
     const ctx = canvas.getContext("2d");
 
@@ -130,6 +132,11 @@
     function log(message) {
       const time = new Date().toISOString().slice(11, 19);
       debugEl.textContent = `[${time}] ${message}\n` + debugEl.textContent;
+    }
+
+    function logCell(message) {
+      const time = new Date().toISOString().slice(11, 19);
+      cellDebugEl.textContent = `[${time}] ${message}\n` + cellDebugEl.textContent;
     }
 
     function setStatus(text) {
@@ -525,6 +532,7 @@
       if (filled) {
         if (!has) {
           filledSquares.add(key);
+          logCell(`Cell filled: ${key}`);
           return true;
         }
         return false;
@@ -533,9 +541,11 @@
         filledSquares.delete(key);
         clearCellVertexOffsets(key);
         pruneVertexOffsets();
+        logCell(`Cell cleared: ${key}`);
         return true;
       } else {
         filledSquares.add(key);
+        logCell(`Cell toggled on: ${key}`);
         return true;
       }
     }
@@ -585,6 +595,8 @@
     let paintValue = true;
     let lastPaintKey = null;
     let draggingVertexKey = null;
+    let dragStartOffset = null;
+    let dragLastOffset = null;
     let pendingDraw = false;
 
     function scheduleDraw() {
@@ -697,6 +709,8 @@
           draggingVertexKey = `${nearest.x},${nearest.y}`;
           isPainting = false;
           lastPaintKey = null;
+          dragStartOffset = vertexOffsets.get(draggingVertexKey) || { dx: 0, dy: 0 };
+          dragLastOffset = dragStartOffset;
           canvas.setPointerCapture(event.pointerId);
         } else {
           if (!key) {
@@ -737,7 +751,9 @@
           return;
         }
         const snapped = snapToMagnet(x, y, draggingVertexKey);
-        vertexOffsets.set(draggingVertexKey, { dx: snapped.x - base.x, dy: snapped.y - base.y });
+        const offset = { dx: snapped.x - base.x, dy: snapped.y - base.y };
+        vertexOffsets.set(draggingVertexKey, offset);
+        dragLastOffset = offset;
         scheduleDraw();
         return;
       }
@@ -761,7 +777,16 @@
         canvas.releasePointerCapture(event.pointerId);
       }
       if (draggingVertexKey) {
+        if (dragStartOffset && dragLastOffset) {
+          const dx = dragLastOffset.dx - dragStartOffset.dx;
+          const dy = dragLastOffset.dy - dragStartOffset.dy;
+          if (Math.abs(dx) > 0.01 || Math.abs(dy) > 0.01) {
+            logCell(`Vertex moved: ${draggingVertexKey} dx=${dragLastOffset.dx.toFixed(2)} dy=${dragLastOffset.dy.toFixed(2)}`);
+          }
+        }
         draggingVertexKey = null;
+        dragStartOffset = null;
+        dragLastOffset = null;
         canvas.releasePointerCapture(event.pointerId);
       }
     });
@@ -770,6 +795,8 @@
       isPainting = false;
       lastPaintKey = null;
       draggingVertexKey = null;
+      dragStartOffset = null;
+      dragLastOffset = null;
     });
 
     window.addEventListener("resize", drawGrid);
